=item 0.08 - April 14, 2004

Increment version to fix PAUSE upload problem. 

=item 0.07 - April 7, 2004

Ported modules to work with mod_perl 2.0 [Frank Wiles <frank@wiles.org>]

Fixed compilation problem on WIN32 platform.

=item 0.06 - October 11, 1999

fix APACHE_DPROF_PATH [Balazs Rauznitz <balazs@Commissioner.com>]

fix Apache::DB for 5.005_6x+

sync Apache::SmallProf w/ Devel::SmallProf 0.07 (cpu time support)

=item 0.05 - June 6, 1999

included example perldb.conf

included Apache::SmallProf

included Apache::DProf

=item 0.04 - April 14, 1999

added init() function

updated docs
 
=item 0.03 - April 5, 1999

fix for threaded Perl

=item 0.02 - April 1, 1999

first public release

