@@ -18,7 +18,7 @@ BEGIN {
 {
     no strict;
     @ISA = qw(DynaLoader);
-    $VERSION = '0.08';
+    $VERSION = '0.09';
     __PACKAGE__->bootstrap($VERSION);
 }
 
